--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 		<maven.build.helper.version>3.0.0</maven.build.helper.version>
 		<jetty.version>9.4.11.v20180605</jetty.version>
 		<jersey.version>2.27</jersey.version>
+		
+		<sonar.projectKey>balu-sn-devops_First_repo</sonar.projectKey>
+		<sonar.organization>balu-sn-devops</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<version>0.0.1-SNAPSHOT</version>
@@ -75,6 +79,7 @@
 
 
 			</plugin>
+			
 
 		</plugins>
 	</build>
