--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.test</groupId>
-	<artifactId>balu-sn-devops_First_repo</artifactId>
+	<artifactId>First_repo</artifactId>
 
 	<dependencies>
 		<dependency>
