--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,15 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			     <groupId>org.sonarsource.scanner.maven</groupId>
+			     <artifactId>sonar-maven-plugin</artifactId>
+			
+			     <configuration>
+			       <goalPrefix>sonar</goalPrefix>
+			     </configuration>
+			
+			 </plugin>
+			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
