--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<maven.compiler.source>${java.version}</maven.compiler.source>
-					<maven.compiler.target>${java.version}</maven.compiler.target>
+					<maven.compiler.source>1.8</maven.compiler.source>
+					<maven.compiler.target>1.8</maven.compiler.target>
 				</configuration>
 			</plugin>
 			<plugin>
