--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,10 @@
-def artifactname = "sp-boot-app.jar"
-def repoName = "sp-boot-app-repo"
-def pipelineName = "devops_vk_pipeline"
+def artifactname = "rome-rp1-app.jar"
+def repoName = "rome-rp1-app-repo"
+def pipelineName = "balu_scripted_pipeline"
 def semanticVersion = "${env.BUILD_NUMBER}.0.0"
-def packageName = "spboot-package_${env.BUILD_NUMBER}"
+def packageName = "rome-rp1-package_${env.BUILD_NUMBER}"
 def version = "${env.BUILD_NUMBER}.0"
-def pkgName = "sp-boot-package"
+def pkgName = "rome-rp1-package"
 
 pipeline {
   agent any
@@ -14,14 +14,14 @@ pipeline {
   stages {
        stage('Build') {
            steps {
-              snDevOpsStep()
+              
               sh 'mvn -B -DskipTests clean compile'
 
            }
        }
        stage('Test') {
            steps {
-              snDevOpsStep()
+              
               sh 'mvn test'
            }
            post {
@@ -32,37 +32,18 @@ pipeline {
        }
       stage('Deploy') {
                  steps {
-                    snDevOpsStep()
+                    
                     echo 'Deploying the change....'
                     snDevOpsChange()
+                    
+                    snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"master"}""")
+           			snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
+                    
+                    
                  }
       }
 
-     stage('PublishArtifacts') { 
-	            steps {
-	            	snDevOpsStep (enabled:true)
-	               //snDevOpsStep (stepSysId:'47828d591b9c60106951da86cc4bcbfa', ignoreErrors:true)
-	               
-	               snDevOpsChange()
-	               echo 'Publishing Artifacts....'
-                	sleep 3
-					//snDevOpsArtifact(artifactsPayload:"""{"artifacts": [{"name": "${artifactname}-${env.BUILD_NUMBER}","semanticVersion": "${semanticVersion}","repositoryName": "${repoName}"}],"stageName": "PublishArtifacts"}""")            
-	                snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"master"}""")
-	           
-	            }
-	            
-	        }
 
-		stage('PublishPackage') {
-         steps {
-         	snDevOpsStep (enabled:true)
-            //snDevOpsStep (stepSysId:'5b9281591b9c60106951da86cc4bcbfe', ignoreErrors:true)
-            echo 'Publishing Package....'
-         	//snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
-            snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
-        
-         }
- 	}
  }
  
 }
