--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
+		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -122,10 +123,8 @@
 					</suiteXmlFiles>
 				</configuration>
 
-
 			</plugin>
 			
-
 		</plugins>
 	</build>
 </project>
