UPDATED SONAR SUMMARIES

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,6 +11,9 @@ pipeline {
   tools {
        maven 'Maven'
    }
+   environment {
+	 SCANNER_HOME = tool 'sonarScanner'
+	}  
   stages {
        stage('Build') {
            steps {
@@ -34,11 +37,10 @@ pipeline {
                  steps {
                     
                     echo 'Deploying the change....'
-                    snDevOpsChange()
-                    
+                    snDevOpsChange(ignoreErrors:false)
+                    sonarSummaries()
                     snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"master"}""")
            			snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
-                    
                     
                  }
       }
@@ -47,3 +49,17 @@ pipeline {
  }
  
 }
+
+def sonarSummaries() {
+
+   //withSonarQubeEnv('Sonar_Cloud') {
+       //sh '${SCANNER_HOME}/bin/sonar-scanner -Dproject.settings=${SCANNER_HOME}/conf/qa-sonar-scanner-cloud.properties'
+   
+	//}
+	
+    withSonarQubeEnv('sonarQube_local') {
+       	sh '${SCANNER_HOME}/bin/sonar-scanner -Dproject.settings=${SCANNER_HOME}/conf/qa-sonar-scanner.properties'
+   		// sh '${SCANNER_HOME}/bin/sonar-scanner -Dproject.settings=${SCANNER_HOME}/conf/sonar-scanner.properties'
+	}
+	
+} // end of def sonarsummaries
