--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,6 +21,7 @@ pipeline {
                     
 
                     echo 'Deploying the change and artifacts in same stage....'
+		    sonarSummaries()
                     snDevOpsChange()
                     snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"master"}""")
         			snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
